crates/data-dict/tests/snapshots/validate_spec__s07_wrong_rep_on_enum.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: table
    columns:
      - name: status
        type: enum
        range: [0, 10]
в”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђ
error: [S07] An `enum` column must list its categories with `values`.
 --> dict.yaml:7:15
  |
4 |   - name: table
5 |     columns:
6 |       - name: status
7 |         type: enum
  |               ^^^^ has type `enum` but is missing `values`
error: [S07] An `enum` column must use `values`, not `range`.
 --> dict.yaml:8:16
  |
4 |   - name: table
5 |     columns:
6 |       - name: status
7 |         type: enum
8 |         range: [0, 10]
  |                ^^^^^^ has type `enum` but uses `range`
